--- a/.inputrc
+++ b/.inputrc
@@ -3,8 +3,8 @@
 "\e[B": history-search-forward
 #"\e[C": forward-char
 #"\e[D": backward-char
-#"\e[1~": beginning-of-line
-#"\e[4~": end-of-line            # for END
+"\e[1~": beginning-of-line
+"\e[4~": end-of-line
 #"\e[3~": delete-char            # for DEL
 #"\e[5~": history-search-backward # pageup
 #"\e[6~": history-search-forward # pagedown
